syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message BattleStatsRequestDto {
  google.protobuf.BytesValue battle_id = 2;
}
