syntax = "proto3";
import "calculation.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message StatBoostDto {
  int32 order = 1;
  Calculation calculation = 2;
  string unitStatDefinitionId = 3;
  float value = 4;
  optional string unitStatAttributeDefinitionId = 6;
}