syntax = "proto3";
import "production_source_constant.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message CityMapEntityDto {
  string city_entity_id = 2;
  int32 x = 4;
  int32 y = 5;
  repeated CityMapEntityProductionDto productions = 6;
  bool is_rotated = 9;
  string customization_entity_id = 15;
  int32 customization_applied_at = 16;
  int32 level = 18;
}

message CityMapEntityProductionDto {
  string definition_id = 2;
  bool is_started = 8;
  ProductionSourceConstant source = 13;
}
