syntax = "proto3";
import "player_dto.proto";
import "city_map_entity_dto.proto";
import "expansion_map_entity_dto.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message OtherCityDTO {
  int32 player_city_id = 1;
  PlayerDto player = 2;
  string city_id = 3;
  repeated CityMapEntityDto map_entities = 5;
  repeated ExpansionMapEntityDto expansion_map_entities = 6;
}