syntax = "proto3";
import "stat_boost_dto.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message EquipmentItemDto {
  int32 id = 1;
  string equipmentSlotTypeDefinitionId = 2;
  string equipmentSetDefinitionId = 3;
  string equipmentRarityDefinitionId = 4;
  int32 level = 5;
  string equippedOnHeroDefinitionId = 6;
  bool isNew = 7;
  EquipmentAttributeDto mainAttribute = 8;
  repeated EquipmentAttributeDto subAttributes = 9;
}

message EquipmentAttributeDto {
  string unitStatAttributeDefinitionId = 1;
  StatBoostDto statBoost = 2;
  int32 unlockedAtLevel = 3;
  bool unlocked = 4;
  float rolledValue = 5;
}
