syntax = "proto3";
import "battle_squad_dto.proto";
import "player_with_alliance_dto.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message PlayerProfileResponse {
  int32 player_id = 1;
  PlayerWithAllianceDto player_with_alliance = 2;
  int32 rank = 3;
  int32 ranking_points = 4;
  repeated ProfileSquadDto squads = 5;
  optional string pvp_tier = 6;
  optional int32 treasure_hunt_difficulty = 7;
}

message ProfileSquadDto {
  int32 place = 1;
  BattleUnitPropertiesDto hero = 2;
  BattleUnitPropertiesDto support_unit = 3;
}
