syntax = "proto3";
import "alliance_join_policy.proto";
import "alliance_info_dto.proto";

option csharp_namespace = "Ingweland.Fog.Inn.Models.Hoh";

message AllianceRankDto {
  int32 id = 1;
  int32 rank = 2;
  int32 points = 3;
  int32 member_count = 4;
  string name = 5;
  int32 avatar_icon_id = 6;
  int32 avatar_background_id = 7;
  int32 max_members = 8;
  AllianceJoinPolicy type = 9;
  string language = 10;
  AllianceInfoDto info = 11;
  string description = 12;
}
